--- a/data/tb2c_vis.html
+++ b/data/tb2c_vis.html
@@ -1,6 +1,7 @@
 <html>
 
 <head>
+    <title>tb2c 3d tiles</title>
     <script src="../../../chowder_injection.bundle.js"></script>
     <script src="../../itowns/itowns.js"></script>
     <script src="../../GUI/LoadingScreen.js"></script>
