--- a/data/tb2c_vis.html
+++ b/data/tb2c_vis.html
@@ -2,9 +2,9 @@
 
 <head>
     <title>tb2c 3d tiles</title>
-    <script src="../../../chowder_injection.bundle.js"></script>
-    <script src="../../itowns/itowns.js"></script>
-    <script src="../../GUI/LoadingScreen.js"></script>
+    <script src="/chowder_injection.bundle.js"></script>
+    <script src="/itowns/itowns/itowns.js"></script>
+    <script src="/itowns/GUI/LoadingScreen.js"></script>
     <script>
       THREE = itowns.THREE;
     </script>
